# streamlit-app

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  data.json  docker-compose.yml  pyproject.toml
.github/worflows/: ci.yml
.github/workflows/: cd.yml  ci.yml
app/: __main__.py  main.py
app/fastapi_env/: Dockerfile  README.md  __main__.py  api.py  docker-compose.yml  main.py  pyproject.toml  start.sh
app/fastapi_env/maths/: mon_module.py
app/fastapi_env/models/: models.py
app/fastapi_env/modules/: connect.py  crud.py
app/streamlit_env/: .env.example  Dockerfile  __main__.py  docker-compose.yml  pyproject.toml
app/streamlit_env/pages/: 0_insert.py  1_Affichage.py
docker_env/: .env.example  docker-compose.yml
docs/source/: conf.py  coverage.rst  index.rst  modules.rst  tests.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_2a6268fece73efb2_0_insert_py.html  z_2a6268fece73efb2_1_Affichage_py.html  z_4d41180e35411b95_connect_py.html  z_4d41180e35411b95_crud_py.html  z_5f5a17c013354698___main___py.html  z_5f5a17c013354698_main_py.html  z_a73e3172030c7e0b___main___py.html  z_caf78fd16399186c_mon_module_py.html  z_f11f7eae4ab53b14___main___py.html  z_f11f7eae4ab53b14_api_py.html  z_f11f7eae4ab53b14_main_py.html  z_f17b7a9f586527cc_models_py.html
tests/: test_fastapi.py  test_main.py  test_streamlit.py
