[project]
name = "streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "myst-parser>=5.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "sphinx>=9.0.4",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxcontrib-mermaid>=2.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"] # Erreurs, Warnings, Pyflakes, Isort, Docstrings
ignore = [
    "D100", # Absence de docstring en début de fichier
    "D104", # Absence de docstring dans les packages (__init__.py)
    "D203", # Conflit avec D211 (One blank line before class)
    "D213", # Conflit avec D212 (Multi-line summary second line)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.uv.workspace]
members = [
    "app/fastapi_env",
]
